@@ -1,3 +1,7 @@
+<b>2009-01-07</b>
+
+* Bug: Blank class, reason no longer assigned defaults when edited
+
 <b>2009-01-06</b>
 
 * OpenFlights Delta released!
